[gd_scene load_steps=7 format=1]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://flip_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 5.0
margin/right = 288.0
margin/bottom = 164.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GameTimerLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 407.0
margin/top = 5.0
margin/right = 656.0
margin/bottom = 164.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
text = "Time: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MessageLabel" type="Label" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 261.0
margin/top = 843.0
margin/right = -241.0
margin/bottom = 522.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
text = "Flip the coins!

Black coins = +1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StartButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 253.0
margin/top = 913.0
margin/right = 433.0
margin/bottom = 997.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.184314, 0.462745, 0.901961, 1 )
custom_colors/font_color = Color( 0.184314, 0.462745, 0.901961, 1 )
custom_colors/font_color_pressed = Color( 0.184314, 0.462745, 0.901961, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="MessageTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]


